--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,18 @@
-//task wrapper(type: Wrapper) {
-    //gradleVersion = '4.1'
-//}
+buildscript {
+    repositories {
+        mavenLocal()
+        jcenter()
+    }
+    dependencies {
+        classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.1.0'
+        classpath 'com.benjaminsproule:swagger-gradle-plugin:1.0.14'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    }
+}
+
+plugins {
+    id 'maven-publish'
+}
 
 //if the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx)
 //use that, else use a default value
@@ -65,21 +77,10 @@ ext.libs = [
     zzDUMMYzz: "makes sorting easier"
 ]
 
-buildscript {
-    repositories {
-        mavenLocal()
-        jcenter()
-    }
-    dependencies {
-        classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.1.0'
-        classpath 'com.benjaminsproule:swagger-gradle-plugin:1.0.14'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-    }
-}
-
+// To give us the clean task
+apply plugin: 'base'
 
 allprojects {
-    apply plugin: 'maven'
     apply plugin: 'maven-publish'
     apply plugin: 'com.jfrog.bintray'
 
@@ -238,20 +239,36 @@ task aggregatedJavadocs(
     description: 'Generate javadocs from all child projects as if it was a single project', 
     group: 'Documentation') {
 
-	destinationDir = file("$buildDir/docs/javadoc")
-	title = "$project.name $version API"
-	options.author true
-	options.links 'http://docs.oracle.com/javase/8/docs/api/'
-	options.addStringOption 'Xdoclint:none', '-quiet'
-	
-	subprojects.each { proj ->
-		proj.tasks.withType(Javadoc).each { javadocTask ->
-			source += javadocTask.source
-			classpath += javadocTask.classpath
-			excludes += javadocTask.excludes
-			includes += javadocTask.includes
-		}
-	}
+    doLast {
+        println "Created aggregate javadoc"
+    }
+
+    //dependsOn project(':stroom-query-api').javadoc
+    //dependsOn project(':stroom-query-common').javadoc
+    //dependsOn project(':stroom-query-hibernate').javadoc
+    //dependsOn project(':stroom-query-audit').javadoc
+    //dependsOn project(':stroom-query-testing').javadoc
+
+    destinationDir = file("$buildDir/docs/javadoc")
+    title = "$project.name $version API"
+    options.author true
+    options.links 'http://docs.oracle.com/javase/8/docs/api/'
+    options.addStringOption 'Xdoclint:none', '-quiet'
+
+    subprojects.each { proj ->
+        proj.tasks.withType(Javadoc).each { javadocTask ->
+            dependsOn proj.javadoc
+
+            source += javadocTask.source
+            classpath += javadocTask.classpath
+            excludes += javadocTask.excludes
+            includes += javadocTask.includes
+        }
+    }
 }
 
-tasks.build.dependsOn aggregatedJavadocs
+project(':stroom-query-api').build.dependsOn aggregatedJavadocs
+
+clean {
+    delete "build"
+}
